<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.admin.remotedroidconn.OpenAppActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="282dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:textSize="25sp"

            android:text="Open User Applications" />


        <Button
            android:id="@+id/button4"
            android:layout_width="282dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:text="@string/calc" />

        <Button
            android:id="@+id/button5"
            android:layout_width="282dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"

            android:text="@string/player" />
        <Button
            android:id="@+id/button6"
            android:layout_width="282dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"

            android:text="@string/paint" />

        <Button
            android:id="@+id/button7"
            android:layout_width="282dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"

            android:text="@string/browser" />

        <Button
            android:id="@+id/button8"
            android:layout_width="282dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"

            android:text="@string/adobe" />
        <Button
            android:id="@+id/button9"
            android:layout_width="282dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"

            android:text="@string/notepad" />
        <Button
            android:id="@+id/button10"
            android:layout_width="282dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"

            android:text="@string/word" />
        <Button
            android:id="@+id/button11"
            android:layout_width="282dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"

            android:text="@string/wordpad" />
        <Button
            android:id="@+id/button12"
            android:layout_width="282dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"

            android:text="@string/Excel" />






    </LinearLayout>



</ScrollView>
